logs/html_generate.log
  File "D:\Study\codexTest\CodexLOFarb\LOF03_generate_monitor_html.py", line 597
    continue # 没有找到基准汇率，严禁使用固定值，强制熔断
    ^^^^^^^^
SyntaxError: 'continue' not properly in loop
